@@ -191,6 +191,15 @@ elements</a>).</p>
     <td align="center" valign="top">No</td>
   </tr>
   <tr>
+    <td valign="top">outputtoformatters</td>
+    <td valign="top">
+      <em>Since Ant 1.7.0.</em><br/>
+      Send any output generated by tests to the test formatters.
+      This is "true" by default.
+    </td>
+    <td align="center" valign="top">No</td>
+  </tr>
+  <tr>
     <td valign="top">tempdir</td>
     <td valign="top">Where Ant should place temporary files.
       <em>Since Ant 1.6</em>.</td>
