@@ -145,7 +145,12 @@ public class JUnitTask extends Task {
     private boolean includeAntRuntime = true;
     private Path antRuntimeClasses = null;
 
+    // Do we send output to System.out/.err in addition to the formatters?
     private boolean showOutput = false;
+
+    // Do we send output to the formatters ?
+    private boolean outputToFormatters = true;
+
     private File tmpDir;
     private AntClassLoader classLoader = null;
     private Permissions perm = null;
@@ -550,6 +555,17 @@ public class JUnitTask extends Task {
     }
 
     /**
+     * If true, send any output generated by tests to the formatters.
+     *
+     * @param outputToFormatters if true, send output to formatters (Default
+     *                           is true).
+     * @since Ant 1.7.0
+     */
+    public void setOutputToFormatters(boolean outputToFormatters) {
+        this.outputToFormatters = outputToFormatters;
+    }
+
+    /**
      * Assertions to enable in this program (if fork=true)
      * @since Ant 1.6
      * @param asserts assertion set
@@ -923,6 +939,9 @@ public class JUnitTask extends Task {
 
         cmd.createArgument().setValue(Constants.SHOWOUTPUT
                                       + String.valueOf(showOutput));
+        cmd.createArgument().setValue(Constants.OUTPUT_TO_FORMATTERS
+                                      + String.valueOf(outputToFormatters));
+        
         cmd.createArgument().setValue(Constants.LOGTESTLISTENEREVENTS+"true"); // #31885
 
         StringBuffer formatterArg = new StringBuffer(STRING_BUFFER_SIZE);
@@ -964,10 +983,12 @@ public class JUnitTask extends Task {
                                      + "file.", e, getLocation());
         }
 
-        Execute execute = new Execute(new JUnitLogStreamHandler(this,
-                                                                Project.MSG_INFO,
-                                                                Project.MSG_WARN),
-                                      watchdog);
+        Execute execute = new Execute(
+            new JUnitLogStreamHandler(
+                this,
+                Project.MSG_INFO,
+                Project.MSG_WARN),
+            watchdog);
         execute.setCommandline(cmd.getCommandline());
         execute.setAntRun(getProject());
         if (dir != null) {
@@ -1051,7 +1072,9 @@ public class JUnitTask extends Task {
         if (output.startsWith(TESTLISTENER_PREFIX)) {
             log(output, Project.MSG_VERBOSE);
         } else if (runner != null) {
-            runner.handleOutput(output);
+            if (outputToFormatters) {
+                runner.handleOutput(output);
+            }
             if (showOutput) {
                 super.handleOutput(output);
             }
